<resources>
    <string name="app_name">MascotasApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dni">12345678K</string>
    <string name="name">Nombre</string>
    <string name="age">Edad</string>
    <string name="email">Example@gmail.com</string>
    <string name="password">Contraseña</string>
    <string name="btn_registro">Registrarme</string>
    <string name="labelEmail">Correo Electrónico</string>
    <string name="labelPassword">Contraseña</string>
    <string name="btn_LogIn">Iniciar sesión</string>
    <string name="tvEdad">Edad</string>
    <string name="search">Buscar</string>
    <string name="raza">Raza</string>
    <string name="txtbtn_imgPet">Borrar</string>
    <string name="txtbtn_imgEdit">Editar</string>
    <string name="btn_add_pet">Registrar mascota</string>
    <string name="registrar_mascota">Registrar mascota</string>
    <string name="mis_mascotas">Mis mascotas</string>
</resources>